--- a/config/application.properties
+++ b/config/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=${POSTGRES_PASSWORD:55}
 
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
+
+application-description=Its Done UK Application
+application-license=API Licence
+application-version=1.0
